--- a/nodejsrestapi.yml
+++ b/nodejsrestapi.yml
@@ -50,11 +50,11 @@ spec:
                 secretKeyRef:
                   name: postgresql-secret
                   key: postgresql-password
-            - name: ELASTIC_APM_SECRET_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: apm-public-cert-token
-                  key: token
+            #- name: ELASTIC_APM_SECRET_TOKEN
+            #  valueFrom:
+            #    secretKeyRef:
+            #      name: apm-public-cert-token
+            #      key: token
             - name: GEMINI_API_KEY
               valueFrom:
                 secretKeyRef:
@@ -85,10 +85,10 @@ spec:
             failureThreshold: 3
             successThreshold: 1
           volumeMounts:
-            - name: apm-public-cert-token
-              mountPath: /etc/ca-certificates/tls.crt
-              subPath: tls.crt
-              readOnly: true
+            #- name: apm-public-cert-token
+            #  mountPath: /etc/ca-certificates/tls.crt
+            #  subPath: tls.crt
+            #  readOnly: true
             - name: nodejs-fluentd-config
               mountPath: /etc/td-agent
             - name: nodejsrestapi-config
@@ -103,9 +103,6 @@ spec:
               memory: 2Gi
         - name: fluentd
           image: khteh/fluentd:latest
-          env:
-            - name: FLUENTD_ARGS
-              value: -c /etc/td-agent/td-agent.conf
           volumeMounts:
             - name: log
               mountPath: /var/log/nodejsrestapi
@@ -115,10 +112,10 @@ spec:
               mountPath: /tmp/access_log_template.json
               subPath: access_log_template.json
               readOnly: true
-            - mountPath: /fluentd/elastic/tls.crt
-              name: elasticsearch-ca
-              subPath: tls.crt
-              readOnly: true
+            #- mountPath: /fluentd/elastic/tls.crt
+            #  name: elasticsearch-ca
+            #  subPath: tls.crt
+            #  readOnly: true
           resources:
             limits:
               cpu: 500m
@@ -135,16 +132,16 @@ spec:
             name: access-log-template
         - name: log
           emptyDir: {}
-        - name: elasticsearch-ca
-          secret:
-            defaultMode: 420
-            optional: false
-            secretName: elasticsearch-eck-ca # This is the secret that holds the Elasticsearch CA cert
-        - name: apm-public-cert-token
-          secret:
-            defaultMode: 420
-            optional: false
-            secretName: apm-public-cert-token # This is the secret that holds the Elasticsearch CA cert
-            items:
-              - key: tls.crt
-                path: tls.crt
+        #- name: elasticsearch-ca
+        #  secret:
+        #    defaultMode: 420
+        #    optional: false
+        #    secretName: elasticsearch-eck-ca # This is the secret that holds the Elasticsearch CA cert
+        #- name: apm-public-cert-token
+        #  secret:
+        #    defaultMode: 420
+        #    optional: false
+        #    secretName: apm-public-cert-token # This is the secret that holds the Elasticsearch CA cert
+        #    items:
+        #      - key: tls.crt
+        #        path: tls.crt
