--- a/ethereum/svc-geth.yml
+++ b/ethereum/svc-geth.yml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   name: svc-geth
   annotations:
-    alb.ingress.kubernetes.io/backend-protocol: HTTPS
-    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
+    alb.ingress.kubernetes.io/backend-protocol: HTTP
+    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
     #alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
     #alb.ingress.kubernetes.io/healthcheck-path: /health/live
   labels:
