--- a/Ethereum/svc-lodestar-validator.yml
+++ b/Ethereum/svc-lodestar-validator.yml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-lodestar
+  name: svc-lodestar-validator
   annotations:
     alb.ingress.kubernetes.io/backend-protocol: HTTP
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
     #alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
     #alb.ingress.kubernetes.io/healthcheck-path: /health/live
   labels:
-    component: beacon
-    app: lodestar
+    component: lodestar
+    app: lodestar-validator
 spec:
   ports:
-    - name: lodestarrpc
+    - name: metrics
       protocol: TCP
-      port: 8551
-      targetPort: lodestarrpc
+      port: 9002
+      targetPort: metrics
   clusterIP: None # Headless. type cannot be LoadBalancer
   sessionAffinity: ClientIP
   sessionAffinityConfig:
     clientIP:
       timeoutSeconds: 60
   selector:
-    app: lodestar
-    component: beacon
+    app: lodestar-validator
+    component: lodestar
 #    tier: frontend
 #  type: LoadBalancer # Exposes web to traffic from outside of the cluster
 ---
@@ -32,16 +32,21 @@ kind: Service
 metadata:
   name: svc-lodestar-nodeport
   labels:
-    component: beacon
-    app: lodestar
+    component: lodestar
+    app: lodestar-validator
 spec:
   ports:
-    - name: lodestarrpc
+    - name: lodestar-tcp
       protocol: TCP
-      port: 8551
-      targetPort: lodestarrpc
-      nodePort: 31007
+      port: 9000
+      targetPort: lodestar-tcp
+      nodePort: 31009
+    - name: lodestar-udp
+      protocol: UDP
+      port: 9000
+      targetPort: lodestar-udp
+      nodePort: 31010
   type: NodePort
   selector:
-    component: beacon
-    app: lodestar
+    component: lodestar
+    app: lodestar-validator
