--- a/Ethereum/geth.yml
+++ b/Ethereum/geth.yml
@@ -19,32 +19,22 @@ spec:
         - name: geth
           image: ethereum/client-go:v1.14.12
           imagePullPolicy: IfNotPresent
-          args:
-            - --holesky
-            - --http
-            - --http.addr=0.0.0.0
-            - --http.port=8545
-            - --http.vhosts=*
-            - --http.corsdomain=*
-            - --ws
-            - --ws.addr=0.0.0.0
-            - --ws.port=8545
-            - --ws.origins=*
-            - --authrpc.addr=0.0.0.0
-            - --authrpc.vhosts=*
-            - --authrpc.port=8551
-            - --authrpc.jwtsecret=/tmp/jwtsecret
-            - --datadir=/data
-            - --metrics
-            - --metrics.addr=0.0.0.0
-            - --metrics.port=6060
+          envFrom:
+            - configMapRef:
+                name: geth-config
           ports:
             - containerPort: 8545
               name: gethrpc
               protocol: TCP
             - containerPort: 30303
-              name: gethdiscovery
+              name: p2p-tcp
+              protocol: TCP
+            - containerPort: 30303
+              name: p2p-udp
               protocol: UDP
+            - containerPort: 8551
+              name: gethauth
+              protocol: TCP
             - containerPort: 6060
               name: metrics
               protocol: TCP
@@ -63,6 +53,10 @@ spec:
               mountPath: /tmp/jwtsecret
               subPath: jwtsecret
               readOnly: true
+            - name: geth-config
+              mountPath: /tmp/geth-config.yml
+              subPath: geth-config.yml
+              readOnly: true
             - name: geth-data
               mountPath: data
           resources:
@@ -77,6 +71,9 @@ spec:
             items:
               - key: jwtsecret
                 path: jwtsecret
+        - name: geth-config
+          configMap:
+            name: geth-config
   volumeClaimTemplates:
     - metadata:
         name: geth-data
