--- a/Ethereum/svc-lodestar-validator.yml
+++ b/Ethereum/svc-lodestar-validator.yml
@@ -30,7 +30,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-lodestar-nodeport
+  name: svc-lodestar-validator-nodeport
   labels:
     component: lodestar
     app: lodestar-validator
