--- a/eks-admin-sa.yml
+++ b/eks-admin-sa.yml
@@ -1,21 +1,21 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: eks-admin
+  name: sa-eks-admin
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: eks-admin
+  name: crb-eks-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: role-cluster-admin
 subjects:
-- kind: ServiceAccount
-  name: eks-admin
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: sa-eks-admin
+    namespace: kube-system
 ---
 apiVersion: v1
 kind: Secret
