--- a/kube2iam-daemonset.yml
+++ b/kube2iam-daemonset.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: kube2iam
+  name: sa-kube2iam
   namespace: kube-system
 ---
 apiVersion: v1
@@ -9,7 +9,7 @@ items:
   - apiVersion: rbac.authorization.k8s.io/v1
     kind: ClusterRole
     metadata:
-      name: kube2iam
+      name: role-kube2iam
     rules:
       - apiGroups: [""]
         resources: ["namespaces", "pods"]
@@ -20,11 +20,11 @@ items:
       name: kube2iam
     subjects:
       - kind: ServiceAccount
-        name: kube2iam
+        name: sa-kube2iam
         namespace: kube-system
     roleRef:
       kind: ClusterRole
-      name: kube2iam
+      name: role-kube2iam
       apiGroup: rbac.authorization.k8s.io
 kind: List
 ---
