--- a/spark_rbac.yml
+++ b/spark_rbac.yml
@@ -1,18 +1,19 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: sa-eks-admin
-  namespace: kube-system
+  name: sa-apache-spark
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: crb-eks-admin
+  name: crb-apache-spark
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: role-cluster-admin
+  name: edit
 subjects:
   - kind: ServiceAccount
-    name: sa-eks-admin
-    namespace: kube-system
+    name: sa-apache-spark
+    namespace: default
