--- a/ragagent_config.yml
+++ b/ragagent_config.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pythonrestapi
+  name: rag-agent
 data:
   pythonrestapi_config.json: |
     {
         "ENVIRONMENT": "development",
         "DEBUG": true,
         "TESTING": true,
-        "SECRET_KEY": "PythonRestAPI",
-        "JWT_SECRET_KEY": "PythonRestAPI",
+        "SECRET_KEY": "RAGAgent",
+        "JWT_SECRET_KEY": "RAGAgent",
         "SQLALCHEMY_TRACK_MODIFICATIONS": false,
         "DB_MAX_CONNECTIONS": 10,
         "HEALTHZ": {
