--- a/ragagent_config.yml
+++ b/ragagent_config.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: rag-agent
+  name: ragagent
 data:
-  pythonrestapi_config.json: |
+  ragagent_config.json: |
     {
         "ENVIRONMENT": "development",
         "DEBUG": true,
@@ -16,12 +16,4 @@ data:
                     "live": "src.app.liveness",
                     "ready": "src.app.readiness"
                 },
-        "OIDC_CLIENT_SECRETS": "/tmp/oidc-secret.json",
-        "OIDC_ID_TOKEN_COOKIE_SECURE": false,
-        "OIDC_USER_INFO_ENABLED": true,
-        "OIDC_REQUIRE_VERIFIED_EMAIL": false,
-        "OIDC_OPENID_REALM": "OneClick",
-        "OIDC_SCOPES": ["openid", "email", "profile", "roles"],
-        "OIDC_INTROSPECTION_AUTH_METHOD": "client_secret_post",
-        "OIDC_TOKEN_TYPE_HINT": "access_token"
     }
