--- a/ragagent.yml
+++ b/ragagent.yml
@@ -81,6 +81,10 @@ spec:
               mountPath: /etc/ragagent_config.json
               subPath: ragagent_config.json
               readOnly: true
+            - name: hypercorn-config
+              mountPath: /etc/hypercorn.toml
+              subPath: hypercorn.toml
+              readOnly: true
           #        - name: log
           #          mountPath: /var/log/aspnetcore
           resources:
@@ -92,6 +96,8 @@ spec:
           volumeMounts:
             - name: log
               mountPath: /var/log/ragagent
+            - name: hypercornlog
+              mountPath: /var/log/hypercorn
             - name: ragagent-fluentd-config
               mountPath: /etc/td-agent
             - name: access-log-template
@@ -107,6 +113,9 @@ spec:
               cpu: 500m
               memory: 2Gi
       volumes:
+        - name: hypercorn-config
+          configMap:
+            name: hypercorn
         - name: ragagent-config
           configMap:
             name: ragagent
@@ -117,6 +126,8 @@ spec:
           configMap:
             name: access-log-template
         - name: log
+          emptyDir: {}
+        - name: hypercornlog
           emptyDir: {}
         #- name: elasticsearch-ca
         #  secret:
