--- a/ragagent_config.yml
+++ b/ragagent_config.yml
@@ -11,6 +11,7 @@ data:
         "SECRET_KEY": "RAGAgent",
         "JWT_SECRET_KEY": "RAGAgent",
         "SQLALCHEMY_TRACK_MODIFICATIONS": false,
+        "DB_HOST": "svc-postgresql",
         "DB_MAX_CONNECTIONS": 10,
         "HEALTHZ": {
                     "live": "src.app.liveness",
