--- a/svc-pythonrestapi.yml
+++ b/svc-pythonrestapi.yml
@@ -9,10 +9,14 @@ metadata:
     app: pythonrestapi
 spec:
   ports:
-    - name: https
+    - name: https-tcp
+      protocol: TCP
+      port: 443
+      targetPort: https-tcp
+    - name: https-udp
       protocol: UDP
       port: 443
-      targetPort: https
+      targetPort: https-udp
   clusterIP: None # Headless. type cannot be LoadBalancer
   selector:
     app: pythonrestapi
@@ -28,11 +32,16 @@ metadata:
     app: pythonrestapi
 spec:
   ports:
-    - name: https
+    - name: https-tcp
+      protocol: TCP
+      port: 443
+      targetPort: https-tcp
+      nodePort: 31001
+    - name: https-udp
       protocol: UDP
       port: 443
-      targetPort: https
-      nodePort: 31001
+      targetPort: https-udp
+      nodePort: 31002
   type: NodePort
   selector:
     app: pythonrestapi
