--- a/ragagent.yml
+++ b/ragagent.yml
@@ -90,8 +90,10 @@ spec:
               mountPath: /etc/hypercorn.toml
               subPath: hypercorn.toml
               readOnly: true
-          #        - name: log
-          #          mountPath: /var/log/aspnetcore
+            - name: log
+              mountPath: /var/log/pythonrestapi
+            - name: hypercornlog
+              mountPath: /var/log/hypercorn
           resources:
             limits:
               cpu: 500m
@@ -100,7 +102,7 @@ spec:
           image: khteh/fluentd:latest
           volumeMounts:
             - name: log
-              mountPath: /var/log/ragagent
+              mountPath: /var/log/pythonrestapi
             - name: hypercornlog
               mountPath: /var/log/hypercorn
             - name: ragagent-fluentd-config
