Fix hypercorn accesslog and errorlog config. Use curl for HTTP/3 probes

--- a/hypercorn_config.yml
+++ b/hypercorn_config.yml
@@ -4,8 +4,8 @@ metadata:
   name: hypercorn-config
 data:
   hypercorn.toml: |
-    accesslog = "/var/log/hypercorn"
-    errorlog = "/var/log/hypercorn"
+    accesslog = "/var/log/hypercorn/access.log"
+    errorlog = "/var/log/hypercorn/errors.log"
     loglevel = "DEBUG"
     alt_svc_headers = ["h3=\":443\"; ma=3600, h3-29=\":443\"; ma=3600"]
     bind = ["0.0.0.0:443"]
